release/1.14/VERSION.md
# 1.14

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.14```   |
| Release Time   | ```2019-04-23T14:52:44+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.14```   |
| sha1   | ```43b2f3021fe9f7d768378de95538e22da3ee8301```   |
| size   | ```227730```   |
| total size  | ```214054321```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/43b2f3021fe9f7d768378de95538e22da3ee8301/1.14.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```7a762a59345c13af7d87111207a93f5a8607f6c0```   |
| size   | ```18796546```   |
| url       | ```https://piston-data.mojang.com/v1/objects/7a762a59345c13af7d87111207a93f5a8607f6c0/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```f1a0073671057f01aa843443fef34330281333ce```   |
| size   | ```35914001```   |
| url       | ```https://piston-data.mojang.com/v1/objects/f1a0073671057f01aa843443fef34330281333ce/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |